Adds automatic updating of Java Experience, Adds more info

--- a/home.html
+++ b/home.html
@@ -37,8 +37,8 @@
 					style="background-color:#5ec9f8;"></span></span>,
             <span class="lang-button" style="color: #024a69;" data-panel="clang">C++<span class="underline"
                 style="background-color:#024a69;"></span></span>,
-			<span class="lang-button" style="color: #63f105;" data-panel="htmlcss">HTML/CSS/JS<span class="underline"
-					style="background-color:#63f105;"></span></span>, and
+			<span class="lang-button" style="color: #59b918;" data-panel="htmlcss">HTML/CSS/JS<span class="underline"
+					style="background-color:#59b918;"></span></span>, and
 			<span class="lang-button" style="color: #f1c80f;" data-panel="others">others<span class="underline"
 					style="background-color:#f1c80f;"></span></span>.
 		</h2>
@@ -52,19 +52,13 @@
 		</svg>
 		<div id="java" class="lang-panel">
 			<h2><a href="https://www.java.com/en/" target="_blank">Java</a></h2>
-			<h3 class="lang-desc">Node is my language of choice for both <span>quick scripts</span> and for <span>web
-					servers</span> using <a href="https://expressjs.com/" target="_blank">Express</a>. I've been using
-				it for about <span>2 years</span> now, and I'd call myself <span>proficient</span>.</h3>
+			<h3 class="lang-desc">Java is my primary language and the one that I have <span id="javaExperience"> years</span> 
+				of Professional Industry Experience using. I would call myself an <span>Expert in Java Software Engineering</span>
 			<div class="projects java" data-cat="java">
 				<div project-data="wowarmourybot" class="proj" style="background-image: url(img/WoW.png)">
 					<h3>World of Warcraft <br> Discord Bot</h3>
 				</div>
-				<div project-data="growth_tracker" class="proj" style="background-image: url(img/growth_tracker.png)">
-					<h3>Growth Tracker</h3>
-				</div>
-				<div project-data="minesweeper_b" class="proj" style="background-image: url(img/minesweeper.png)">
-					<h3>Minesweeper Royale<br>(backend)</h3>
-				</div>
+			
 			</div>
 		</div>
 		<div id="go" class="lang-panel">
@@ -75,15 +69,7 @@
 				about it, but I'm <span>intermediate</span> overall.
 			</h3>
 			<div class="projects go" data-cat="go">
-				<div project="dunabase" class="proj" style="background-image: url(img/dunabase.png)">
-					<h3>Dunabase</h3>
-				</div>
-				<div project="source_mobile" class="proj" style="background-image: url(img/source.png)">
-					<h3>Source Mobile</h3>
-				</div>
-				<div project="repertoire" class="proj" style="background-image: url(img/repertoire.png)">
-					<h3>Repertoire</h3>
-				</div>
+				
 			</div>
 		</div>
         <div id="clang" class="lang-panel">
@@ -94,15 +80,7 @@
 				about it, but I'm <span>intermediate</span> overall.
 			</h3>
 			<div class="projects clang" data-cat="clang">
-				<div project="dunabase" class="proj" style="background-image: url(img/dunabase.png)">
-					<h3>Dunabase</h3>
-				</div>
-				<div project="source_mobile" class="proj" style="background-image: url(img/source.png)">
-					<h3>Source Mobile</h3>
-				</div>
-				<div project="repertoire" class="proj" style="background-image: url(img/repertoire.png)">
-					<h3>Repertoire</h3>
-				</div>
+				
 			</div>
 		</div>
 		<div id="htmlcss" class="lang-panel">
@@ -113,14 +91,11 @@
 				but I'm <span>proficient</span> at this stack.
 			</h3>
 			<div class="projects htmlcss" data-cat="htmlcss">
-				<div project="snake" class="proj" style="background-image: url(img/snake.png)">
+				<div project-data="snake" class="proj" style="background-image: url(img/snake.png)">
 					<h3>Snake</h3>
 				</div>
-				<div project="portfolio" class="proj" style="background-image: url(img/profile.png)">
+				<div project-data="portfolio" class="proj" style="background-image: url(img/profile.png)">
 					<h3>Portfolio</h3>
-				</div>
-				<div project="minesweeper_f" class="proj" style="background-image: url(img/minesweeper.png)">
-					<h3>Minesweeper Royale<br>(frontend)</h3>
 				</div>
 			</div>
 		</div>
