Adds CodeWars and Leetcode Links

--- a/home.html
+++ b/home.html
@@ -115,7 +115,7 @@
 				</div>
 			</div>
 		</div>
-		<canvas width="500" height="500" id="snake"></canvas>
+		
 		<div id="details">
 			<h2>Check out my <a href="https://github.com/alexwarwick01" class="d" target="_blank"
 					style="color:#949494;">GitHub<span class="underline" style="background-color:#949494;"></span></a>,
@@ -126,6 +126,11 @@
 			<h2>Want to reach out? <a href="mailto:alexwarwick01@gmail.com" class="d" target="_blank"
 					style="color:#949494;">Email me!<span class="underline"
 						style="background-color:#949494;"></span></a></h2>
+
+			<h2>Also check out my <a href="https://leetcode.com/u/AlexWarwick01/" class="d" target="_blank"
+				style="color:#949494;">Leetcode<span class="underline" style="background-color:#949494;"></span></a> and
+					<a href="https://www.codewars.com/users/Alex_Warwick01" class="d" target="_blank" style="color:#949494;">CodeWars<span class="underline"
+					style="background-color:#949494;"></span></a> profiles!</h2>
 		</div>
 		<div id="modal">
 			<h2></h2>
