Adds more Info to Languages, Other Tab will become Skills eventually

--- a/home.html
+++ b/home.html
@@ -63,10 +63,9 @@
 		</div>
 		<div id="go" class="lang-panel">
 			<h2><a href="https://go.dev/" target="_blank">Go</a></h2>
-			<h3 class="lang-desc">Flutter, Google's framework for creating cross-platform (<span>iOS</span> and
-				<span>Android</span>) <span>mobile apps</span>, is my favorite language to work in. I've created 2
-				public and a few private apps over the <span>9 months</span> I've used it. I'm still learning new things
-				about it, but I'm <span>intermediate</span> overall.
+			<h3 class="lang-desc">Go is Google's backend language thats been getting very popular recently. With that I decided to start learning
+				it <span>"a few" months ago.</span> So far I havent created any notable projects using <span>GO</span> and I'd say Im still a <span>beginner</span> overall.
+				But I've had a blast using it.
 			</h3>
 			<div class="projects go" data-cat="go">
 				
@@ -85,10 +84,11 @@
 		</div>
 		<div id="htmlcss" class="lang-panel">
 			<h2><a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">HTML/CSS/JS</a></h2>
-			<h3 class="lang-desc">My first venture into programming, when I was <span>9 years old</span>, was an
-				incredibly awful website that was entirely HTML and a few inline styles. I've gotten just a <i>bit</i>
-				better since then &ndash; I'm still learning design principles,
-				but I'm <span>proficient</span> at this stack.
+			<h3 class="lang-desc">As with everyone, this is the stack where it all began around <span>10 years ago</span>, 
+				I made some pretty terrible websites that have thankfully been wiped from the face of the planet. 
+				Since then, I have improved atleast slightly, using this stack everywhere from random projects to <span>production software</span>
+				as I also do <span>Fullstack Development</span> ontop of Java. I would call myself an <span>Expert</span> in this stack, especially using <span>Angular</span>
+				**Note I am Currently in the process learning <span>React</span> too!
 			</h3>
 			<div class="projects htmlcss" data-cat="htmlcss">
 				<div project-data="snake" class="proj" style="background-image: url(img/snake.png)">
@@ -101,18 +101,11 @@
 		</div>
 		<div id="others" class="lang-panel">
 			<h2>Other skills</h2>
-			<h3 class="lang-desc">I've also worked in <span>Java</span>, <span>C++</span>, <span>C#</span> (although
-				since switching to Linux I haven't gotten much chance to use it), and a bit of <span>Python</span>.</h3>
+			<h3 class="lang-desc">I've worked with <span>Python</span> and <span>Ruby</span> not in a professional capacity. I am also learning about <span>Docker</span>.
+				I have industry experience with <span>Microservice Architecture</span> and <span id="oracleDBExperience"> years</span> worth of OracleDB knowledge.
+				</h3>
 			<div class="projects others" data-cat="others">
-				<div project="antislouch" class="proj" style="background-image: url(img/slouch.png)">
-					<h3>AntiSlouch</h3>
-				</div>
-				<div project="reqlang" class="proj" style="background-image: url(img/WIP.png)">
-					<h3>ReqLang</h3>
-				</div>
-				<div project="ognes" class="proj" style="background-image: url(img/ognes.png)">
-					<h3>OGNes</h3>
-				</div>
+				
 			</div>
 		</div>
 		
